Fixed some alignment"

--- a/static/styles.css
+++ b/static/styles.css
@@ -14,22 +14,19 @@ body{
 
 #page-container {
   position: relative;
-  width:100vw;
   min-height: 100vh;
 }
 
 #content-wrap{
-  height:100%;
-  margin-bottom: 2.5rem;
+  padding-bottom:5rem;
 }
 
 #footer {
-  position: absolute;
-  bottom: 0px;
-  width: 100vw;
-  height: 2.5rem;
-  margin:auto;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4rem;
 }
 
 .footer-text {
@@ -100,7 +97,6 @@ nav {
   align-items: flex-start;
   justify-content: space-between;
   font-size: 20px;
-  margin-top:16vh;
 }
 
 .option {
@@ -144,11 +140,6 @@ nav {
   width: 100%;
 }
 
-.option-price-container {
-  width: 100%;
-  height: 100%;
-}
-
 .option-price {
   color:white;
   font-weight: bold;
@@ -157,7 +148,7 @@ nav {
 
 .contents {
   margin:auto;
-  padding: 10rem 0 10rem 0;
+  padding: 10rem 0 2rem 0;
   width: 80%;
   display: flex;
   flex-direction: row;
@@ -325,15 +316,15 @@ nav {
   }
 
   .contents {
-    height:50vh;
     width:80%;
     flex-direction: column;
     align-items: center;
-    margin-top: 100vh;
+    margin-top: 90vh;
   }
 
   .content-container {
     width: 100%;
+    margin-top: 2rem;
   }
 
   .contact-container {
